--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -103,7 +103,7 @@ const defaultCards = [
     </Section>
 
     <Section flex={true}>
-        <Tips>
+        <Tips btn={true}>
             <p 
                 slot="text"
                 class="inline gap-1"
@@ -119,12 +119,6 @@ const defaultCards = [
                 </span>
                 <span class="font-medium text-[19px] tracking-3 leading-[142%]">vous propose une étude technique pour votre installation et la maintenance de votre borne de recharge électrique.</span>
             </p>
-            
-            <Button 
-                slot="button"
-                text="Nous contacter"
-                color="yellow"
-            />
         </Tips>
     </Section>
 
@@ -188,6 +182,7 @@ const defaultCards = [
         <Tips
             title="Offre de parrainage"
             isBig={true}
+            btn={true}
         >
             <p 
                 slot="text"
@@ -209,12 +204,6 @@ const defaultCards = [
                     ! Parrainez un ami ou un proche pour l'installation d'une borne de recharge électrique, et bénéficiez chacun d'une remise de 40 euros sur nos services. Partagez les avantages de la mobilité électrique tout en économisant sur votre installation.                                            Rejoignez-nous dès aujourd'hui pour promouvoir une mobilité plus verte et obtenir des réductions pour vous et vos proches. 
                 </span>
             </p>
-            
-            <Button 
-                slot="button"
-                text="Nous contacter"
-                color="yellow"
-            />
         </Tips>
     </section>
 
