--- a/src/components/Tips.astro
+++ b/src/components/Tips.astro
@@ -1,9 +1,11 @@
 ---
 import Image from './atom/Image.astro';
+import ButtonContact from './ButtonContact.astro';
  
 export interface Props {
 	title?: string;
     isBig?: boolean;
+    btn?: boolean;
 }
 const prop = Astro.props 
 ---
@@ -20,9 +22,11 @@ const prop = Astro.props
             <h3 class="text-purple font-bold mb-2">{prop.title}</h3>
         }
         <slot name="text" />
-        <div class="mt-4">
-            <slot name="button" />
-        </div>
+        {prop.btn && 
+            <div class="mt-4">
+                <ButtonContact />
+            </div>
+        }
     </div>
 </div>
 
