--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import '../styles/main.scss';
 import Image from '../components/atom/Image.astro';
 import Header from './Header.astro';
 import Footer from './Footer.astro';
+import { ViewTransitions } from 'astro:transitions';
 
 export interface Props {
 	title: string;
@@ -14,6 +15,7 @@ const { title } = Astro.props;
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
+		<ViewTransitions />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="description" content="Astro description">
@@ -36,7 +38,7 @@ const { title } = Astro.props;
 	</head>
 	<body class="flex flex-col bg-light font-montserrat text-base leading-[140%]">
 		<Header />	
-		<main class="container">
+		<main class="container"  transition:animate="initial">
 			<slot />
 		</main>
 		<div class="bg-container">
