--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,10 @@
 @use 'base' as *; 
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
+
+// html {
+//     font-size: calc(14px + 2 * ((100vw - 320px) / 1000));z
+// }
 
 
 .link-effect {
