--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,6 +5,7 @@ import Tips from '../components/Tips.astro';
 import ProjectStripe from '../components/ProjectStripe.astro';
 import Section from '../components/Section.astro';
 import Card from '../components/Card.astro';
+import Alert from '../components/atom/Alert.astro';
 import Image from '../components/atom/Image.astro';
 import Button from '../components/atom/Button.astro';
 import H1 from '../components/H1.astro';
@@ -23,17 +24,211 @@ const cards = [
 ]
 ---
 
+<script>
+    const submitButton = document.querySelector('button[type="submit"]') as Element;
+    const alertValidContainer = document.querySelector('.alert-valid') as Element
+    const alertErrorContainer = document.querySelector('.alert-error') as Element
+    function validateForm() {
+        const name = document.getElementById("form_name")?.value as tring;
+        const email = document.getElementById("form_email")?.value as tring;
+        const phone = document.getElementById("form_phone")?.value as tring;
+        const message = document.getElementById("form_message")?.value as tring;
+
+        // Regular expression for a valid email address
+        const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+        const phoneRegex = /^\d+$/;
+
+        if (name.length < 4 || email.length < 4 || phone.length < 4 || message.length < 4) return false;
+        if (!email?.match(emailRegex)) return false;
+        if (!phone?.match(phoneRegex)) return false;
+
+        return true;
+    }
+
+    submitButton.addEventListener('click', (e) => {
+        e.preventDefault();
+        if(validateForm()) {
+            alertValidContainer.classList.add('show');
+            setTimeout(() => {
+                alertValidContainer.classList.remove('show');
+            }, 2500);
+        }
+        else {
+            alertErrorContainer.classList.add('show');
+            setTimeout(() => {
+                alertErrorContainer.classList.remove('show');
+            }, 2500);
+        }
+    });
+
+    const alertCopyContainer = document.querySelector('.alert-copy') as Element
+    const alertCopyButtons = [...document.querySelectorAll('li[data-device]')] as Array<HTMLLIElement>
+
+    alertCopyButtons.forEach((button) => {
+        button.addEventListener('click', () => {
+            const text = button.querySelector('p')?.textContent.replace(/\s+/g,'') as String;
+            copy(text);
+        })
+    })  
+    function copy(text) {
+        navigator.clipboard.writeText(text);
+        alertCopyContainer.classList.add('show');
+        setTimeout(() => {
+            alertCopyContainer.classList.remove('show');
+        }, 2500);
+    }
+
+
+</script>
+
 <Layout title="Preezeo">
+
+    <div class="alert alert-error">
+        <Alert 
+            type="error"
+            text="Il y a eu une erreur lors de l'envoi du message.<br> Veuillez vérifier les champs et réessayer. <br> Minimum 4 caractères par champs."
+        > 
+            <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="44" height="44" fill="#e3ce82" viewBox="0 0 256 256"><path d="M168.49,104.49,145,128l23.52,23.51a12,12,0,0,1-17,17L128,145l-23.51,23.52a12,12,0,0,1-17-17L111,128,87.51,104.49a12,12,0,0,1,17-17L128,111l23.51-23.52a12,12,0,0,1,17,17ZM236,128A108,108,0,1,1,128,20,108.12,108.12,0,0,1,236,128Zm-24,0a84,84,0,1,0-84,84A84.09,84.09,0,0,0,212,128Z"></path></svg>
+        </Alert>
+    </div>
+
+    <div class="alert alert-valid">
+        <Alert 
+            type="success"
+            text="Message envoyé"
+        > 
+            <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 256 256"><path d="M176.49,95.51a12,12,0,0,1,0,17l-56,56a12,12,0,0,1-17,0l-24-24a12,12,0,1,1,17-17L112,143l47.51-47.52A12,12,0,0,1,176.49,95.51ZM236,128A108,108,0,1,1,128,20,108.12,108.12,0,0,1,236,128Zm-24,0a84,84,0,1,0-84,84A84.09,84.09,0,0,0,212,128Z"></path></svg>
+        </Alert>
+    </div>
+
+    <div class="alert alert-copy">
+        <Alert 
+            type="success"
+            text="Copié dans le presse-papier !"
+        > 
+            <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 256 256"><path d="M172,156a12,12,0,0,1-12,12H96a12,12,0,0,1,0-24h64A12,12,0,0,1,172,156Zm-12-52H96a12,12,0,0,0,0,24h64a12,12,0,0,0,0-24Zm60-56V216a20,20,0,0,1-20,20H56a20,20,0,0,1-20-20V48A20,20,0,0,1,56,28H90.53a51.88,51.88,0,0,1,74.94,0H200A20,20,0,0,1,220,48ZM128,36a28,28,0,0,0-27.71,24h55.42A28,28,0,0,0,128,36Zm68,16H178.59A52.13,52.13,0,0,1,180,64v8a12,12,0,0,1-12,12H88A12,12,0,0,1,76,72V64a52.13,52.13,0,0,1,1.41-12H60V212H196Z"></path></svg>
+        </Alert>
+    </div>
+
+
     <section class="flex flex-col gap-14 justify-center text-center items-center mt-20">
         <Headline />
     </section>
 
-    <Section flex={true}>
-      
+
+    <Section c="relative mt-20 ml-20">
+        <H1 text="contactez nous" />
+        <div class="flex gap-10 justify-between">
+            <div class="link-svg">
+                <div class="absolute -top-9 -right-3">
+                    <Image 
+                        src="/img/icons/message.svg" 
+                        alt="Message icon"
+                        fetchPriority={true}
+                    />
+                </div>
+                <svg width="377" height="99" viewBox="0 0 377 99" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="345.023" y="43" width="22.698" height="4.91639" rx="2.45819" fill="#FFB800"/>
+                    <rect x="335" y="55.8477" width="41.5086" height="4.941" rx="2.4705" fill="#FFB800"/>
+                    <path d="M356 96.0117V53.9998" stroke="#FFB800" stroke-width="5" stroke-linecap="round"/>
+                    <line x1="355.507" y1="96.0035" x2="2.50349" y2="96.4965" stroke="#FFB800" stroke-width="5" stroke-linecap="round"/>
+                    <path d="M5 3C5 1.61929 3.88071 0.5 2.5 0.5C1.11929 0.5 0 1.61929 0 3H5ZM5 96L5 3H0L0 96H5Z" fill="#FFB800"/>
+                </svg>
+            </div>
+        </div>
     </Section>
 
-    <Section flex={true}>
-        <ProjectStripe />
+
+    <Section>
+        <div class="relative flex gap-16 justify-between items-stretch mx-auto bg-light2 p-10 border border-purple rounded-2xl">
+            <div class="flex flex-col gap-16 ">
+                <div class="absolute top-10 left-10 h-[25px]">
+                    <Image 
+                        src="/img/logo/text_burgundy.svg" 
+                        alt="Preezeo logo"
+                        fetchPriority={true}
+                    />
+                </div>
+
+                <div class="flex flex-col grow-1 gap-4 justify-start items-start my-auto">
+                    <ul class="flex flex-col gap-4 ">
+                        <li data-device="mail" class="flex items-center gap-4 py-1 cursor-pointer duration-300 font-medium hover:opacity-50">
+                            <div class="w-[30px]">
+                                <Image 
+                                    src="/img/icons/mail.svg" 
+                                    alt="Mail icon"
+                                    fetchPriority={true}
+                                />
+                            </div>
+                            <p class="text-sm font-semibold tracking-2">contact@preezeo.fr</p>
+                        </li>
+                        <li data-device="phone" class="flex items-center gap-4 py-1 cursor-pointer duration-300 font-medium hover:opacity-50">
+                            <div class="w-[30px]">
+                                <Image 
+                                    src="/img/icons/phone.svg" 
+                                    alt="Phone icon"
+                                    fetchPriority={true}
+                                />
+                            </div>
+                            <p class="text-sm font-semibold tracking-2">07 88 28 10 89</p>
+                        </li>
+                        <li class="flex items-center gap-4 py-1 cursor-pointer duration-300 font-medium hover:opacity-50">
+                            <a class="flex items-center gap-4" href="https://www.google.fr/maps/place/64200+Biarritz/@43.4709891,-1.57639,14z/data=!3m1!4b1!4m6!3m5!1s0xd51152b0af31e33:0x40665174813a830!8m2!3d43.4831519!4d-1.558626!16zL20vMDFoM3Rs?entry=ttu" target="_blank">
+                                <div class="w-[30px]">
+                                    <Image 
+                                        src="/img/icons/location.svg" 
+                                        alt="Location icon"
+                                        fetchPriority={true}
+                                    />
+                                </div>
+                                <p class="text-sm font-semibold tracking-2">57 avenue du General Juin <br> 64500 Biarritz</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="flex flex-col gap-6 grow-1 bg-metal text-blue px-8 py-10 rounded-xl">
+                <h2 class="text-base tracking-2 font-bold">Je suis ...</h2>
+
+                <form class="flex flex-col items-stretch gap-5 w-100" method="POST">
+                    <div class="form_group flex flex-wrap gap-2">
+                        <input type="radio" id="category_individual" value="individual" name="category" checked required />
+                        <label for="category_individual">Particulier</label>
+        
+                        <input type="radio" id="category_professional" value="professional" name="category" required />
+                        <label for="category_professional">Professionnel</label>
+        
+                        <input type="radio" id="category_infrastructure" value="infrastructure" name="category" required />
+                        <label for="category_infrastructure">Infrastructure collective</label>
+                    </div>
+
+                    <div class="form_group flex w-2/3 gap-2 border-b-2 border-purple">
+                        <input type="text" id="form_name" name="name" placeholder="Nom*" required/>
+                    </div>
+
+                    <div class="form_group flex w-2/3 gap-2 border-b-2 border-purple">
+                        <input type="email" id="form_email" name="email" placeholder="Mail*" required />
+                    </div>
+
+                    <div class="form_group flex w-2/3 gap-2 border-b-2 border-purple">
+                        <input type="tel" id="form_phone" name="phone" placeholder="Téléphone*" required/>
+                    </div>
+
+                    <div class="form_group flex gap-2 border-b-2 border-purple">
+                        <textarea id="form_message" name="message" placeholder="Message*" required></textarea>
+                    </div>
+
+                    <div class="form_group flex gap-2 mt-20">
+                        <button type="submit" class="ml-auto py-2 px-8 border border-purple rounded-xl duration-150 hover:bg-purple">
+                            Envoyer
+                        </button>
+                    </div>
+
+                </form>
+            </div>
+
+        </div>
     </Section>
 </Layout>
 
@@ -49,4 +244,79 @@ const cards = [
     translate: 85px 20px;
 }
 
+.alert {
+    opacity: 0;
+    transition: .3s ease;
+    &.show {
+        opacity: 1;
+    }
+}
+
+label {
+    @include flex(center,center);
+    flex-grow: 1;
+    cursor: pointer;
+    background-color:$t;
+    height: 30px;
+    color: var(--blue);
+    font-size: 14px;
+    letter-spacing: 0.42px;
+    text-align: center;
+    width: fit-content;
+    padding: 5px 20px;
+    border-radius: 5px;
+    border: solid 1px var(--purple);
+    transition: .2s linear;
+    outline: 1.5px $t solid;
+
+    &:hover {
+        outline-color: var(--purple);
+    }
+}
+
+.form_group {
+    transition: .3s linear;
+
+    // &:has( > input:required:not(:placeholder-shown):invalid) {
+    //     border-color: var(--error);
+    // }
+    // &:has( > input:required:not(:placeholder-shown):valid) {
+    //     border-color: var(--valid);
+    // }
+    &:hover, &:focus-within {
+        border-color: var(--light-purple)
+    }
+}
+
+input, textarea {
+    width: 100%;
+    padding: 2px 5px;
+    outline: 1px solid $t;
+    transition: .2s linear;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    &[type="radio"] {
+        display: none;
+        &:checked + label {
+            background-color: var(--purple);
+            outline-color: $t !important;
+        }
+    }
+
+    
+
+    &:-webkit-autofill,
+    &:-webkit-autofill:hover, 
+    &:-webkit-autofill:focus {
+        border-color: var(--purple);
+        -webkit-box-shadow: 0 0 0px 1000px var(--metal) inset;
+        transition: 5000s ease-in-out 0s;
+    }
+}
+
+textarea {
+    min-height: 100px;
+}
 </style>
