--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -24,7 +24,7 @@ const subLinks = [
 
 <footer class="flex flex-col align-stretch text-blue">
     <div class="bg-burgundy">
-        <div class="container flex justify-between items-center">
+        <div class="wrapper flex justify-between items-center">
             <div class="flex flex-col gap-2">
                 <a href="/" class="flex justify-center items-center w-[150px]">
                     <Image 
@@ -51,8 +51,8 @@ const subLinks = [
         </div>
     </div>
     <div class="bg-deep-blue py-5">
-        <div class="container flex justify-between items-center">
-            <div class="container flex items-center gap-3">
+        <div class="wrapper flex justify-between items-center">
+            <div class="wrapper flex items-center gap-3">
                 <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_1342_348)">
                     <path d="M10.2776 4.97408C7.50879 5.12513 5.38722 7.48282 5.5389 10.2401C5.6906 12.9974 8.05811 15.1102 10.8269 14.9591C12.1184 14.8886 13.3291 14.3101 14.1923 13.3508L14.2601 13.2755C14.5685 12.9327 14.5395 12.4059 14.1953 12.0987C13.8511 11.7916 13.3221 11.8205 13.0137 12.1632L12.946 12.2385C12.3789 12.8686 11.5837 13.2486 10.7353 13.295C8.88946 13.3956 7.31114 11.9871 7.21001 10.149C7.10888 8.31074 8.52326 6.73895 10.3691 6.63824C11.2175 6.59196 12.0496 6.88319 12.6824 7.44788L12.758 7.51534C13.1022 7.82249 13.6312 7.79363 13.9397 7.45088C14.248 7.10812 14.2191 6.58128 13.8749 6.27413L13.7993 6.20666C12.8359 5.34698 11.5692 4.90361 10.2776 4.97408Z" fill="#E1FFF9"/>
