--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,7 +38,7 @@ const { title } = Astro.props;
 	</head>
 	<body class="flex flex-col bg-light font-montserrat text-base leading-[140%]">
 		<Header />	
-		<main class="container"  transition:animate="initial">
+		<main class="wrapper"  transition:animate="initial">
 			<slot />
 		</main>
 		<div class="bg-container">
@@ -106,6 +106,11 @@ const { title } = Astro.props;
 		//min-height: 5000px;
 	}
 
+	header {
+		position: relative;
+		z-index: 100;
+	}
+
 	main, footer, header {
 		position: relative;
 	}
@@ -122,10 +127,13 @@ const { title } = Astro.props;
 		}
 	}
 
-	.container {
+	.wrapper {
 		margin: 0 auto;
 		width: 90vw;
 		max-width: 1400px;
+		@media screen and (max-width: 550px) {
+			width: 85vw;
+		}
 	}
 
 	.bg-container {
